--- a/Udegelaižed.mw
+++ b/Udegelaižed.mw
@@ -1,7 +1,9 @@
-[[Fail:Udege Family.jpg|thumb|right|250px|Udegelaižiden kanz 20. voz'sadan augotišes: Mez' kahtenke akanke.]]
-'''Udegelaižed''' ({{lang-ude|удээ / удэхе / удиӡ}}, {{lang-ru|удэгейцы}}) oma Pohjoižen igähine [[rahvaz]] [[Venäma]]n suvipäivnouzmas, sen [[Mererandaline rand|Mererandaližes]] i [[Habarovskan rand|Habarovskan]] randoiš.
+[[Fail:Udege Family.jpg|thumb|right|250px|Udegelaižiden kanz 20. voz'sadan augotišes: Mez' kahtenke akanke]]
+'''Udegelaižed''' ({{lang-ude|удээ / удэхе / удиӡ}}, {{lang-ru|удэгейцы}}) oma Pohjoižen igähine [[rahvaz]] [[Venäma]]n suvipäivnouzmas, sen [[Mererandaline rand|Mererandaližes]] (pohjoižpäivnouzm) i [[Habarovskan rand|Habarovskan]] (suvipäivnouzm) randoiš. Mülütadas [[tungusiž-mančžurižed rahvahad|tungusiž-mančžurižihe]] rahvahiže.
 
-Rahvahan lugu om pol'tošt tuhad ristituid (2010), vl 2002 oli 1700 ristitud, poleneb assimiläcijan taguiči. Mamankeled oma [[udegen kel'|udegen]] i [[venäkel'|venän]] keled.
+Udege-heim mainitase Kitain dokumentoiš 12..14. voz'sadaspäi. Rahvahan lugu om pol'tošt tuhad ristituid (2010), vl 2002 oli 1700 ristitud, poleneb assimiläcijan taguiči. Mamankeled oma [[udegen kel'|udegen]] (läz 6 procentad) i [[venäkel'|venän]] keled. Lähembaine rahvaz om [[oroklaižed]] heiden [[orokan kel'|orokan]] heimkelenke, venälaižed tedoidajad ei tekoi erindad kahten rahvahan keskes 1930-nzihe vozihesai.
+
+Ende [[mectuz]] oli rahvahan elonmahton, šamanizm i [[animizm]] oliba päreligijoikš. Udegelaižed jagoiba ičtase roduikš, lasktihe naindad vaiše erazvuiččen rodun ristituile.
 
 {{stub}}
 [[Kategorii:Udegelaižed| ]]
