--- a/Oleite_(Kanzas).mw
+++ b/Oleite_(Kanzas).mw
@@ -14,12 +14,12 @@
  | Aigvö = tal'vel [[UTC]]−6,<br />kezal [[UTC]]−5
 }}
 {{Znamoičendad|Oleite}}
-'''Oleite''' ({{lang-en|Olathe}} [oʊˈleɪθə]) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Kanzas]]-štatas, sen päivnouzmaiženno röunanno, štatan nellänz' lidn eläjiden lugun mödhe.
+'''Oleite''' ({{lang-en|Olathe}} [oʊˈleɪθə]) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Kanzas]]-štatan päivnouzmaiženno röunanno, štatan nellänz' lidn eläjiden lugun mödhe. Se om [[Džonson (ümbrik, Kanzas)|Džonson]]-ümbrikon administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1857 lidnan statusanke. Nimituz znamoičeb «čomakulu» [[šoni (šauni)]]-indejalaižiden kelel.
+Eländpunktan aluz om pandud vl 1857 lidnan statusanke. Nimituz znamoičeb «čomakulu» [[šoni (šauni)]]-indejalaižiden kelel. Kätihe «ezmäižen klassan» lidnaks vl 1970.
 
-Oleite šingotase [[Garmin]]-kompanijan päfateral ([[GPS]]-ladimed), «[[Farmers Insurance]]»-kompanijan järed palakund sijadase siš.
+Oleite šingotase [[Garmin]]-kompanijan päfateral ([[GPS]]-ladimed) i mašinansauvomižen edheotandoiden tegimištparkal. «[[Farmers Insurance]]»-kompanijan järed palakund i Kanzasan il'mlikundan kontrolin keskuz sijadasoiš siš.
 
 == Geografijan andmused ==
 Lidn sijadase 316 m ü.m.t. keskmäižel korktusel.
