+galerei, +hom, aktualizacii

--- a/Čeläbinsk.mw
+++ b/Čeläbinsk.mw
@@ -6,11 +6,11 @@
  | Lidnanznam text = Čeläbinskan lidnanznam
  | Flag text = Čeläbinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 1,200,719
- | Voz' = 2019-01-01
+ | Eläjiden lugu = 1,187,960
+ | Voz' = 2021
  | Pind = 530
  | Fail = Панорамма города.jpg
- | Pämez' = Natal'ja Kotova<br />(kezaku 2019—.<br />''velgusentäutai'')
+ | Pämez' = Natal'ja Kotova<br />(kezaku 2019—)
  | Telefonkod = +7-351-xxx-xxxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -26,6 +26,8 @@ Vozil 1743−1781 lidn oli [[Isetin provincii|Isetin provincijan]] keskuseks, vo
 
 Vl 1892 «[[Samar]] — [[Uf]] — [[Zlatoust]] — Čeläbinsk»-raudte tuli lidnha, tehtihe sidä [[Transsib]]an päteks. Lidn šingotaškanzihe teravas, Venäman leibän (ühtenz' surtte) i čajun (kahtenz' surtte) biržad sijazisoiš täs edel revolücijad. Lidn kazvoi lujas ezmäižiden vižvoččiden planoiden aigan da [[Toine mail'man soda|Suren Voinan]] mändes.
 
+Čeläbinskan ižandusen päsarakod oma metallurgii (rosttumatoi [[teraz]], [[raud]]an ühthesuladused, [[cink]], suren diametran torved, profiliruidud terazlava), likkuimiden da sauvondmašinoiden pästand («ČTZ Uraltrak»-traktortegim<ref>[http://chtz-uraltrac.ru/ «ČTZ Uraltrak»-traktortegimen sait (''chtz-uraltrac.ru'').] {{ref-ru}}</ref>, avtoližvedamad, tesauvondan mašinad), tömašinoiden tehmine, «Molnija»-časuidentegim.
+
 == Geografijan andmused ==
 Lidn sijadase agjan pohjoižpäivnouzmas, [[Miass (jogi)|Miass-jogen]] muugotil randoil ([[Ob' (jogi)|Obin]] hurapol'ne bassein), [[Uralmäged|Suviuralan]] pautkilpäi päivnouzmha, katl'uses 200..250 metrad korktusil. Tulleitomad päiväd ottas voden koumandest. Šeršni-vezivaradim Miass-jogel da koume järedad järved (Smolino, Pervoje, Sineglazovo) mülüdas lidnan territorijha. Miassan hural randal Ural-region om, oiktal randal [[Sibir']] augotase.
 
@@ -39,9 +41,23 @@ Vl 1913 lidnan ristitišt oli 65 100 eläjad. Vn 2010 Venäman rahvahanlugemiže
 Rahvahad (enamba 0,4% vl 2010): [[venälaižed]] — 82,9%, [[totarlaižed]] — 4,8%, [[baškiralaižed]] — 3,0%, [[ukrainalaižed]] — 1,4%, [[saksalaižed]] — 0,6%, [[vaugedvenälaižed]] — 0,4%, toižed rahvahad — 2,7%, rahvahuden ozutandata — 4,2%.
 
 == Transport ==
-Rahvahidenkeskeine civiline ''Čeläbinsk (Balandino)-lendimport'' (''CEK / ЧЛБ'', 1,65 mln passažiroid vl 2018) sijadase 18 kilometras pohjoižpäivnouzmha lidnan keskusespäi. Sišpäi tehtas reisid Evropan da Keskuzazijan maihe, Venämadme tobjimalaz, mugažo čarterreisid lebutahoiže.
+Rahvahidenkeskeine civiline ''Čeläbinsk (Balandino)-lendimport I.V. Kurčatovan nimed'' (''CEK / ЧЛБ'', 1,65 mln passažiroid vl 2018) sijadase 18 kilometras pohjoižpäivnouzmha lidnan keskusespäi. Sišpäi tehtas reisid Evropan da Keskuzazijan maihe, Venämadme tobjimalaz, mugažo čarterreisid lebutahoiže.
 
-Avtobusad, trolleibusad, tramvaid da taksid oma kundaližeks transportaks lidnas. Metropoliten om sauvomižes vspäi 1992, avaiduz planiruiše vl 2025. Äiluguižed sildad ühtenzoittas Miass-jogen randoid. Läz 20 raudtestancijad da platformad ratas Čeläbinskas.
+Avtobusad, trolleibusad, tramvaid da taksid oma kundaližeks transportaks lidnas. Metropoliten om sauvomižes vspäi 1992, kiruhtramvain sisteman avaiduz planiruiše sen sijas vl 2025. Äiluguižed sildad ühtenzoittas Miass-jogen randoid. Läz 20 raudtestancijad da platformad ratas Čeläbinskas. Rengazavtote 140 km pitte ümbärdab lidnad.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Площадь Революции 2 (Челябинск) f002.jpg|Lidnan administracijan sauvuz (2018)
+CHELYABINSK Saint Simeon Church Yard.jpg|Ph. Simeon Verhoturjelaižen kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2015 nägu
+Соборная мечеть № 129 (Челябинск) f011.jpg|Ak-mečet' (islam, om saudud 1890-nzil vozil), vn 2018 nägu
+Общий вид завода.jpg|Čeläbinskan cinkantegim vl 2016
+АО "ЧРЗ"Полёт" расположен в центре Челябинска.jpg|«Polöt»-radiotegim vl 2019
+University (13125656685).jpg|Suviuralan valdkundaline universitet (2011, päsauvuz)
+Chelyabinsk State University main building (01).jpg|Čeläbinskan valdkundaline universitet (2021, päkoprus)
+Челябинская областная клиническая больница № 1 f003.jpg|Čeläbinskan agjan klinine läžundkodi nomer 1, poliklinikan 1. korpus (2018)
+Челябинский аэропорт (Баландино) 2020.jpg|Čeläbinsk (Balandino)-lendimportan rahvahidenkeskeine terminal vl 2020
+Железнодорожный вокзал (Челябинск-Главный) f002.jpg|Čeläbinsk-Päine-raudtestancijan sauvuz adivpertinke vl 2018
+</gallery>
 
 == Homaičendad ==
 <references />
