*Empty MediaWiki Message*

--- a/Čeläbinsk.mw
+++ b/Čeläbinsk.mw
@@ -9,7 +9,7 @@
  | Eläjiden lugu = 1,187,960
  | Voz' = 2021
  | Pind = 530
- | Fail = Панорамма города.jpg
+ | Fail = Вид на на исторический центр города Челябинск.jpg
  | Pämez' = Natal'ja Kotova<br />(kezaku 2019—)
  | Telefonkod = +7-351-xxx-xxxx
  | Avtokod = 74. 174
@@ -26,7 +26,7 @@ Vozil 1743−1781 lidn oli [[Isetin provincii|Isetin provincijan]] keskuseks, vo
 
 Vl 1892 «[[Samar]] — [[Uf]] — [[Zlatoust]] — Čeläbinsk»-raudte tuli lidnha, tehtihe sidä [[Transsib]]an päteks. Lidn šingotaškanzihe teravas, Venäman leibän (ühtenz' surtte) i čajun (kahtenz' surtte) biržad sijazisoiš täs edel revolücijad. Lidn kazvoi lujas ezmäižiden vižvoččiden planoiden aigan da [[Toine mail'man soda|Suren Voinan]] mändes.
 
-Čeläbinskan ižandusen päsarakod oma metallurgii (rosttumatoi [[teraz]], [[raud]]an ühthesuladused, [[cink]], suren diametran torved, profiliruidud terazlava), likkuimiden da sauvondmašinoiden pästand («ČTZ Uraltrak»-traktortegim<ref>[http://chtz-uraltrac.ru/ «ČTZ Uraltrak»-traktortegimen sait (''chtz-uraltrac.ru'').] {{ref-ru}}</ref>, avtoližvedamad, tesauvondan mašinad), tömašinoiden tehmine, «Molnija»-časuidentegim.
+Čeläbinskan ižandusen päsarakod oma metallurgii (rosttumatoi [[teraz]], [[raud]]an ühthesuladused, [[cink]], suren diametran torved, profiliruidud terazlava), likkuimiden da sauvondmašinoiden pästand («ČTZ Uraltrak»-traktortegim<ref>[http://chtz-uraltrac.ru/ «ČTZ Uraltrak»-traktortegimen sait (''chtz-uraltrac.ru'').] {{ref-ru}}</ref>, avtoližavedamad, tesauvondan mašinad), tömašinoiden tehmine, «Molnija»-časuidentegim.
 
 == Geografijan andmused ==
 Lidn sijadase agjan pohjoižpäivnouzmas, [[Miass (jogi)|Miass-jogen]] muugotil randoil ([[Ob' (jogi)|Obin]] hurapol'ne bassein), [[Uralmäged|Suviuralan]] pautkilpäi päivnouzmha, katl'uses 200..250 metrad korktusil. Tulleitomad päiväd ottas voden koumandest. Šeršni-vezivaradim Miass-jogel da koume järedad järved (Smolino, Pervoje, Sineglazovo) mülüdas lidnan territorijha. Miassan hural randal Ural-region om, oiktal randal [[Sibir']] augotase.
