+galerei, +hom, aktualizacii

--- a/Kopeisk.mw
+++ b/Kopeisk.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Kopeisk<br />Копейск
- | Lidnanznam = Coat of Arms of Kopeysk (Chelyabinsk oblast) (2002).png
- | Flag = Flag of Kopeysk (Chelyabinsk oblast).png
+ | Lidnanznam = Coat of Arms of Kopeysk (Chelyabinsk oblast) (2002).svg
+ | Flag = Flag of Kopeysk (Chelyabinsk oblast).svg
  | Lidnanznam text = Kopeiskan lidnanznam
  | Flag text = Kopeiskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 148,231
- | Voz' = 2019-01-01
+ | Eläjiden lugu = 147,634
+ | Voz' = 2020
  | Pind = 236.71
  | Fail = Г. Копейск - panoramio (1).jpg
  | Pämez' = Andrei Faleičik<br />(sulaku 2019—)
@@ -27,11 +27,27 @@ Lidn sijadase lidnümbrikon suvipalas, 200 m ü.m.t. keskmäižel korktusel. Rö
 Kopeisk jagase seičemeks territorialižeks palakundaks. Koume žilod mülüdas lidnümbrikho Kopeiskan ližaks: Kalačovo, Zaozörnii, Sineglazovo. Žilod sätas ümbrikon kahesant territoriališt palakundad. Lidnümbrikon pind — 355 km².
 
 == Eläjad ==
-Vl 1939 lidnan ristitišt oli 60 tuhad eläjid. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 137 601 ristitud, lidnümbrikon — 139 756 ristitud. Kaikiš suremb lidnan ristitišt oli 160..168 tuhad eläjid vll 1959−1967 (168 tuh. rist. vl 1962). Kaik 150 383 ristitud elädas lidnümbrikos vl 2019. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] seičeme pühäpertid oma avaitud lidnas. Nell' türmad-kolonijad oma olmas lidnas mugažo.
+Vl 1939 lidnan ristitišt oli 60 tuhad eläjid. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 137 601 ristitud, lidnümbrikon — 139 756 ristitud. Kaikiš suremb lidnan ristitišt oli 160..168 tuhad eläjid vll 1959−1967 (168 tuh. rist. vl 1962). Kaik 148 231 ristitud elihe lidnas i 150 383 ristitud kaikes lidnümbrikos vl 2019.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] vižtoštkümne pühäpertid<ref>[http://sobory.ru/geo/distr/2524 Kopeiskan lidnümbrikon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma avaitud lidnas da sen ümbrikos: kümne jumalanpertid i viž časounäd. Nell' türmad-kolonijad oma olmas lidnas mugažo.
 
 Rahvahad (2010): [[venälaižed]] — 85,8%, [[totarlaižed]] — 5,7%, [[ukrainalaižed]] — 2,0%, [[saksalaižed]] — 2,0%, [[baškiralaižed]] — 1,6%, toižed rahvahad — 2,9%.
 
 Professionaližen opendusen aluzkundad oma Kopeiskan medicinine tehnikum<ref>[http://kmt74.ru/ Kopeiskan medicinižen tehnikuman sait (''kmt74.ru'').] {{ref-ru}}</ref>, Kopeiskan politehnine kolledž, Suviuralan valdkundaližen universitetan (Čeläbinsk) filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Administration of Kopeysk.jpg|Lidnümbrikon administracijan sauvuz (2008)
+Gorzdrav Kopeyska.jpg|Lidnan tervhudenkaičendan ohjanduz i medicinine škol (2009)
+Триумфальная арка (2).jpg|Triumfaline bembelüläh, vn 2018 nägu
+Г. Копейск - panoramio (10).jpg|Kopeiskan mašinansauvomižen tegim vl 2012
+Chelyabinsk-Yuzhny railway station - 02.jpg|Čeläbinsk-Suvine-sortiruindstancii vl 2021
+School No7.jpg|Keskškol nomer 7 (2008)
+Г. Копейск - panoramio (13).jpg|Lapsiden sädamižen pert'kulu (2012)
+Г. Копейск - panoramio (3).jpg|Tegimen S. Kirovan nimed kul'turkeskuz (2012)
+Г. Копейск - panoramio (2).jpg|«Slava»-torguimižbobuštuzkompleks (2012, ''Hoštuz'')
+Avtovokzal Kopeyska.jpg|Lidnan avtobusstancii vl 2008
+</gallery>
 
 == Homaičendad ==
 <references />
