/* Lehmähä sidodud vepsän muštatišed da ozoitesed */ +

--- a/Lehm.mw
+++ b/Lehm.mw
@@ -51,6 +51,7 @@ Edel vazan sündutandad lupsandad ei ole 45..60 päivest. Maidnikan laktacijan p
 * ''Kacta kuti lehm udehe kašlihe.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Mužik ei ole ak, lehm ei ole hebo.''
+* ''Papile radod ei ole, ka vazoid ristib.''
 * ''Putub kondjale lehm, ka siloi i kargaidab.''
 * ''Siloi om aigad heinäd toda, konz lehm om kolnu.''
 </blockquote>
