/* Vihmha sidodud vepsän muštatišed */ +

--- a/Vihm.mw
+++ b/Vihm.mw
@@ -19,6 +19,7 @@ Muiktad vihmad oma regionaline problem, paneb jändusid čudegišpäi vihmaks se
 <blockquote>
 * ''Keväz'vihm kazvatab, sügüz'vihm kadotab.''
 * ''Märg vihmad ei varaida.''
+* ''Päivnouzm ei heita tullein puhundad, kuni ei vihmu; ak ei heita lajindad, kuni ei itke.''
 * ''Vihmub — ka ed kel'dä, i vihmda ed käske.''
 </blockquote>
 
