/* Tulleihe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Tullei.mw
+++ b/Tullei.mw
@@ -12,16 +12,17 @@ Tulleid erinesoiš vägen mödhe: [[briz]]aspäi [[uragan]]hasai. Kaikenaigaiže
 * ''Tulleipeza'' — kuhmun toižend pus.
 
 == Tulleihe sidodud vepsän muštatišed da ozoitesed ==
-;Muštatišed
+=== Muštatišed ===
 <blockquote>
 * ''Dölota koivuine ei koiverdelde.''
 * ''Koir nutab, tullei kandab.''
 * ''Kuna döl, sinnä i mel'.''
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
+* ''Päivnouzm ei heita tullein puhundad, kuni ei vihmu; ak ei heita lajindad, kuni ei itke.''
 * ''Tullei päs käveleb.''
 </blockquote>
 
-;Ozoitez
+=== Ozoitez ===
 <blockquote>
 * Vellen hebošt ei voi tabata, sizaren laudruzuid ei voi kerata. (ahav da taivaz)
 </blockquote>
