--- a/Päivnouzm.mw
+++ b/Päivnouzm.mw
@@ -4,6 +4,11 @@
 
 Znamoičese nügüdläižil kartoil oiktalpäi. Vastčuraduz om [[päivlaskm]].
 
+== Päivnouzmha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Päivnouzm ei heita tullein puhundad, kuni ei vihmu; ak ei heita lajindad, kuni ei itke.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Päivnouzmma]]
 
