/* Naižhe sidodud vepsän muštatišed */ +

--- a/Naine.mw
+++ b/Naine.mw
@@ -21,6 +21,7 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 * ''Koume akad dai suim.''
 * ''Kut ei sättugoi länged sigale, muga ei sättu vin akale.''
 * ''Mužik ei ole ak, lehm ei ole hebo.''
+* ''Päivnouzm ei heita tullein puhundad, kuni ei vihmu; ak ei heita lajindad, kuni ei itke.''
 * ''Vanh ak vinad job, laho pu vet vedab.''
 </blockquote>
 
