/* Öihe sidodud vepsän muštatiž */ +

--- a/Ö_(aig).mw
+++ b/Ö_(aig).mw
@@ -6,9 +6,10 @@
 
 Ku öl Päiväine om gorizontan südäimes, necidä aigpordod kuctas '''[[vauktad öd|vauktaks öks]]'''. Nece näguz voib nähta [[keza]]l Man pohjoižes (sidä kesken agjoiš, kus [[Vepsänma]] sijadase).
 
-== Öihe sidodud vepsän muštatiž ==
+== Öihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Hüvä vest' öhuden völ magadab, a huba pigai tuleb.''
+* ''Pit'kad päiväd radata, pit'kad öd magadamata.''
 </blockquote>
 
 == Kacu mugažo ==
