/* Öihe sidodud vepsän muštatišed */

--- a/Ö_(aig).mw
+++ b/Ö_(aig).mw
@@ -9,7 +9,7 @@ Ku öl Päiväine om gorizontan südäimes, necidä aigpordod kuctas '''[[vaukta
 == Öihe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Hüvä vest' öhuden völ magadab, a huba pigai tuleb.''
-* ''Pit'kad päiväd radata, pit'kad öd magadamata.''
+* ''Pit'kad päiväd radmata, pit'kad öd magadamata.''
 </blockquote>
 
 == Kacu mugažo ==
