--- a/Maid.mw
+++ b/Maid.mw
@@ -27,6 +27,11 @@ Personad [[laktoz]]an genetiženke sulamatomudenke i [[allergii|allergijanke]] m
 * [[Sagud]]
 * [[Väll'maid]]
 
+== Maidho sidodud vepsän muštatiž ==
+<blockquote>
+* ''Keitmižhe palad, ka hapamaidho puhud.''
+</blockquote>
+
 == Homaičendad ==
 <references/>
 
