/* Rahoiže sidodud vepsän muštatišed */ +

--- a/Rahad.mw
+++ b/Rahad.mw
@@ -22,6 +22,7 @@ Nügüd'aigan elektronižed rahad vajehtadas personaližid. Maksmižen tetpaiže
 <blockquote>
 * ''Den'gad den'goid ei olgoi magedamb.''
 * ''Den'gad rades tuldas, a vihel'dusel lähttas.''
+* ''Den'gha pap'-ki kargaidab.''
 * ''Den'goid kuti kažil kündlid.''
 * ''Den'goil katust ed kata, katad den'goihe.''
 * ''Ei sa rahoid sandal sada, a pidab pidandal pidada.''
