/* Vändho sidodud vepsän muštatišed da ozoitesed */ +

--- a/Vänd.mw
+++ b/Vänd.mw
@@ -13,6 +13,7 @@ Vändon tundused da tärtused: materialižiden satusiden olmatomuz, südäiolend
 <blockquote>
 * ''Eile vändod — eile bobašt.''
 * ''Ezmäi rad, eskai vänd.''
+* ''Kut tal'jank vändab, muga kargnik-ki kargaidab.''
 * ''Ni tutul, ni vätul.'' (eile muga i eile ninga)
 </blockquote>
 
