/* Lämoihe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Lämoi.mw
+++ b/Lämoi.mw
@@ -21,6 +21,7 @@ Eziauguižešti ottihe lämoid kävutamižhe savun samižen täht lendajid gaved
 ;Muštatišed
 <blockquote>
 * ''Lämoid savuta ei olele.''
+* ''Lämoiš läheli vered, ka poltab.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
 * ''Raud ei pala lämoiš.''
 * ''Vargastai vargastab, ka seinäd jätab, a lämoi nimidä ei jäta.''
