/* Živatha sidodud vepsän muštatišed */ +

--- a/Živatad.mw
+++ b/Živatad.mw
@@ -31,6 +31,7 @@ Ezmäižed živatad sünduiba 500 mln («[[kembrii|kembrine]] poukahtuz») ... 1
 <blockquote>
 * ''Aidatomha pöudho kaikutne živat tuleb.''
 * ''Laps' om kuti živat.''
+* ''Mitte tanaz om, ka mugoine živat-ki.''
 * ''Ristit koleb, a živat kadob.''
 </blockquote>
 
