--- a/Kazmused.mw
+++ b/Kazmused.mw
@@ -59,6 +59,11 @@ Kazmused oma ezitadud äjil [[kazmusiden elonformad|elonformil]] — ozutesikš,
 **** [[Cikasenvuiččed]] ({{lang-la|Cycadophyta}})
 **** '''[[Katesemnižed]] ({{lang-la|Magnoliophyta}})'''
 
+== Kazmusihe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Surele tele hein ei kazva.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
