/* Kazmusihe sidodud vepsän muštatiž */ +

--- a/Kazmused.mw
+++ b/Kazmused.mw
@@ -59,8 +59,9 @@ Kazmused oma ezitadud äjil [[kazmusiden elonformad|elonformil]] — ozutesikš,
 **** [[Cikasenvuiččed]] ({{lang-la|Cycadophyta}})
 **** '''[[Katesemnižed]] ({{lang-la|Magnoliophyta}})'''
 
-== Kazmusihe sidodud vepsän muštatiž ==
+== Kazmusihe sidodud vepsän muštatišed ==
 <blockquote>
+* ''Kus oma marjad, ka sigä poimijad-ki oma.''
 * ''Surele tele hein ei kazva.''
 </blockquote>
 
