/* Sildha sidodud vepsän ozoitez */ +

--- a/Sild.mw
+++ b/Sild.mw
@@ -7,7 +7,13 @@ Sauvuz oleleb jaugnikoiden, živatoiden, torvveimiden, veden i transportan täht
 
 Letud tes päliči inženerine sauvuz om [[tenveim]] (pit'k — [[estakad]]), sauvuz vanas (laksos) vai uras päliči nimitase [[viaduk]]aks. Tehtas sildoid neniš materialoišpäi: metall (teraz, alüminijan ühthesuladused), raudbeton, beton, londuseline kivi, pumaterialad, norad. Specializiruidud organizacijad-sildanjoukud saudas da kohetas sildoid. Pordaigaline sild kogoneb pulloišpäi. Sildan vajehtuz om [[ehtatim]].
 
-== Sildha sidodud vepsän ozoitez ==
+== Sildha sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatiž ===
+<blockquote>
+* ''Kaidaižil laudaižil algat mängoi kohtati.''
+</blockquote>
+
+=== Ozoitez ===
 <blockquote>
 * Seižub pap' sildal i kidastab: «Kaikid kuzen!». (samvar)
 </blockquote>
