/* Eländkodihe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -183,6 +183,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 === Muštatišed ===
 <blockquote>
 * ''Hüvä emäg tühjalaz pert'he ei tule.''
+* ''Iknan kohtas paremba vauktut nägub.''
 * ''Kenen koir om, ka sen pertin-ki varjoičeb.''
 * ''Meiden pertid sänke ei ridelkoi.''
 * ''Melev om pertine, a avadimen kadoti.'' (äi mel't)
