--- a/Kuban'_(futbolklub).mw
+++ b/Kuban'_(futbolklub).mw
@@ -1,16 +1,17 @@
 {{Znamoičendad|Kuban'}}
-'''«Kuban'»''' ({{lang-ru|«Кубань»}}) om [[Venäma]]n futbolklub [[Krasnodar]]aspäi.
+'''«Kuban'»''' ({{lang-ru|«Кубань»}}) oli nevondkundaline i [[venäma]]laine futbolklub [[Krasnodar]]aspäi.
 
-Klub om olmas vspäi 1928. Vozil 1958-1960 sen nimituz oli da vspäi 1963 om nügüdläine. Ezini [[Venäman Prem'jer-lig]]as vozil 2011-2016. Voziden 2016/17-sezonas ezineb [[Venäman Futboline Rahvahaline Lig|Venäman FRL:as]].
+Klub oli olmas vspäi 1928. Vozil 1958−1960 i 1963−2018 nimituz oli «Kuban'». Ezini [[Venäman Prem'jer-lig]]as vozil 2011−2016. Voziden 2016/17-sezonas ezini [[Venäman Futboline Rahvahaline Lig|Venäman FRL:as]]. Vn 2018 30. päiväl semendkud futbolklub om likvidiruidud bankrotnendad tagut. Sil-žo aigal uz' futbolklub om sätud sen sijas «Urožai»-nimitusenke, udesnimitihe professionaližeks «Kuban'»-futbolklubas (PFK «Kuban'») vl 2020.
 
-Pätrener — Jevgenii Kalešin (vn 2017 kezakuspäi). Kodiaren — [[Kuban' (stadion)|Kuban'-stadion]] (om saudud vl 1960).
+Pätrener oli Jevgenii Kalešin vn 2017 kezakuspäi.
+
+Kodiaren — [[Kuban' (stadion)|Kuban']]-stadion (om saudud vl 1960). Pämujud oliba pakuine i vihand.
 
 == Irdkosketused ==
-* [http://www.fckuban.ru/ Kluban oficialine sait (''fckuban.ru'').] {{ref-ru}}
-* [http://www.ofckuban.ru/ Fankluban oficialine sait (''ofckuban.ru'').] {{ref-ru}}
+* [http://www.fckuban.com/ Kluban oficialine sait (''fckuban.com'').] {{ref-ru}}
+{{Commons|Category:FC Kuban}}
 
 {{stub}}
-[[Kategorii:FK «Kuban'»| ]]
 [[Kategorii:Venäman futbolklubad]]
 [[Kategorii:Futbolklubad kirjamišton mödhe]]
 [[Kategorii:Krasnodar]]
