--- a/Kuban'_(futbolklub).mw
+++ b/Kuban'_(futbolklub).mw
@@ -1,11 +1,11 @@
 {{Znamoičendad|Kuban'}}
 '''«Kuban'»''' ({{lang-ru|«Кубань»}}) oli nevondkundaline i [[venäma]]laine futbolklub [[Krasnodar]]aspäi.
 
-Klub oli olmas vspäi 1928. Vozil 1958−1960 i 1963−2018 nimituz oli «Kuban'». Ezini [[Venäman Prem'jer-lig]]as vozil 2011−2016. Voziden 2016/17-sezonas ezini [[Venäman Futboline Rahvahaline Lig|Venäman FRL:as]]. Vn 2018 30. päiväl semendkud futbolklub om likvidiruidud bankrotnendad tagut. Sil-žo aigal uz' futbolklub om sätud sen sijas «Urožai»-nimitusenke, udesnimitihe professionaližeks «Kuban'»-futbolklubas (PFK «Kuban'») vl 2020.
+Klub oli olmas vspäi 1928, eziauguine nimituz oli «Dinamo». Vozil 1958−1960 i 1963−2018 nimituz oli «Kuban'». Ezini NSTÜ:n üläligas vll 1980−1982, [[Venäman Prem'jer-lig]]as vozil 1992, 2004, 2007, 2009, 2011−2016. Voziden 2016/17-sezonas ezini [[Venäman Futboline Rahvahaline Lig|Venäman FRL:as]]. Vn 2018 30. päiväl semendkud futbolklub om likvidiruidud bankrotnendan proceduran mändes, sen «Kuban'-2»-farmklub oli tühjitadud mugažo. Vn 2018 5. elokud uz' futbolklub om sätud sen sijas «Urožai»-nimitusenke, udesnimitihe professionaližeks «Kuban'»-futbolklubas (PFK «Kuban'») vn 2020 heinkus.
 
-Pätrener oli Jevgenii Kalešin vn 2017 kezakuspäi.
+Futbolkluban jäl'gmäine pätrener oli Jevgenii Kalešin vn 2017 kezakuspäi.
 
-Kodiaren — [[Kuban' (stadion)|Kuban']]-stadion (om saudud vl 1960). Pämujud oliba pakuine i vihand.
+Kodiaren oli [[Kuban' (stadion)|Kuban']]-stadion (om saudud vl 1960). Kluban pämujud oliba pakuine i vihand.
 
 == Irdkosketused ==
 * [http://www.fckuban.com/ Kluban oficialine sait (''fckuban.com'').] {{ref-ru}}
