--- a/Kuban'_(futbolklub).mw
+++ b/Kuban'_(futbolklub).mw
@@ -1,5 +1,5 @@
 {{Znamoičendad|Kuban'}}
-'''«Kuban'»''' ({{lang-ru|«Кубань»}}) oli nevondkundaline i [[venäma]]laine futbolklub [[Krasnodar]]aspäi.
+'''«Kuban'»''' ({{lang-ru|«Кубань»}}) oli [[Nevondkundaline Ühtištuz|nevondkundaline]] i [[venäma]]laine futbolklub [[Krasnodar]]aspäi.
 
 Klub oli olmas vspäi 1928, eziauguine nimituz oli «Dinamo». Vozil 1958−1960 i 1963−2018 nimituz oli «Kuban'». Ezini NSTÜ:n üläligas vll 1980−1982, [[Venäman Prem'jer-lig]]as vozil 1992, 2004, 2007, 2009, 2011−2016. Voziden 2016/17-sezonas ezini [[Venäman Futboline Rahvahaline Lig|Venäman FRL:as]]. Vn 2018 30. päiväl semendkud futbolklub om likvidiruidud bankrotnendan proceduran mändes, sen «Kuban'-2»-farmklub oli tühjitadud mugažo. Vn 2018 5. elokud uz' futbolklub om sätud sen sijas «Urožai»-nimitusenke, udesnimitihe professionaližeks «Kuban'»-futbolklubas (PFK «Kuban'») vn 2020 heinkus.
 
@@ -12,6 +12,7 @@ Kodiaren oli [[Kuban' (stadion)|Kuban']]-stadion (om saudud vl 1960). Kluban pä
 {{Commons|Category:FC Kuban}}
 
 {{stub}}
+[[Kategorii:NSTÜ:n futbolklubad]]
 [[Kategorii:Venäman futbolklubad]]
 [[Kategorii:Futbolklubad kirjamišton mödhe]]
 [[Kategorii:Krasnodar]]
