--- a/Kuban'_(futbolklub).mw
+++ b/Kuban'_(futbolklub).mw
@@ -1,7 +1,7 @@
 {{Znamoičendad|Kuban'}}
 '''«Kuban'»''' ({{lang-ru|«Кубань»}}) oli [[Nevondkundaline Ühtištuz|nevondkundaline]] i [[venäma]]laine futbolklub [[Krasnodar]]aspäi.
 
-Klub oli olmas vspäi 1928, eziauguine nimituz oli «Dinamo». Vozil 1958−1960 i 1963−2018 nimituz oli «Kuban'». Ezini NSTÜ:n üläligas vll 1980−1982, [[Venäman Prem'jer-lig]]as vozil 1992, 2004, 2007, 2009, 2011−2016. Voziden 2016/17-sezonas ezini [[Venäman Futboline Rahvahaline Lig|Venäman FRL:as]]. Vn 2018 30. päiväl semendkud futbolklub om likvidiruidud bankrotnendan proceduran mändes, sen «Kuban'-2»-farmklub oli tühjitadud mugažo. Vn 2018 5. elokud uz' futbolklub om sätud sen sijas «Urožai»-nimitusenke, udesnimitihe professionaližeks «Kuban'»-futbolklubas (PFK «Kuban'») vn 2020 heinkus.
+Klub oli olmas vspäi 1928, eziauguine nimituz oli «Dinamo». Vozil 1958−1960 i 1963−2018 nimituz oli «Kuban'». Ezini NSTÜ:n üläligas vll 1980−1982, [[Venäman Prem'jer-lig]]as vozil 1992, 2004, 2007, 2009, 2011−2016. Voziden 2016/17-sezonas ezini [[Venäman Futboline Rahvahaline Lig|Venäman FRL:as]]. Vn 2018 30. päiväl semendkud likvidiruihe futbolklubad bankrotnendan proceduran mändes, sen «Kuban'-2»-farmklub oli tühjitadud mugažo. Vn 2018 5. elokud uz' futbolklub om sätud sen sijas «Urožai»-nimitusenke, udesnimitihe professionaližeks «[[Kuban' (futbolklub, 2018)|Kuban']]»-futbolklubas (PFK «Kuban'») vn 2020 heinkus.
 
 Futbolkluban jäl'gmäine pätrener oli Jevgenii Kalešin vn 2017 kezakuspäi.
 
