--- a/.срб.mw
+++ b/.срб.mw
@@ -1,8 +1,16 @@
-'''.срб''' om [[Serbii|Serbijan]] komplimentarine domen. Se om avaitud [[2011]]-nden voden uhokul.
+'''.срб''' om [[Serbii|Serbijan]] komplimentarine domen. Se om avaitud [[2011]]-nden voden uhokul, registracii zavodihe vn 2012 vilukus. Domenan [[punikod]] om ''.xn--90a3ac''.
 
-Nece om toine domen [[kirilline kirjamišt|kirilližel kirjamištol]] internetas.
+Nece om toine ülätazopindan domen [[kirilline kirjamišt|kirilližel kirjamištol]] internetas [[.рф]]-domenan jäl'ghe. Ei sa kävutada latinan kirjamišton znamoid domennimes.
 
-[[Punikod]] om ''.xn--90a3ac''.
+Registracii om lasktud kahtendel tazopindal oikti i koumandel tazopindal kahtenden tazopindan aladomenoil. Ned aladomenad tošttas [[.rs]]-domenan aladomenoiden strukturad.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.пр.срб''' (.co.rs) — edheotandad, biznes
+* '''.орг.срб''' (.org.rs) — organizacijad
+* '''.обр.срб''' (.edu.rs) — opendusen aluzkundad
+* '''.од.срб''' (.in.rs) — personaližed saitad
+* '''.ак.срб''' (.ac.rs) — universitetine verk
+* '''.упр.срб''' (.gov.rs) — valdkundaližed organad.
 
 == Irdkosketused ==
 * [http://www.rnids.rs/ Domenan sait — «Регистар националног Интернет домена Србиjе (RNIDS)» (''rnids.rs'')] {{ref-sr}} {{ref-en}} (mugažo om [[.rs]]-domenan registran)
