--- a/.рф.mw
+++ b/.рф.mw
@@ -1,9 +1,9 @@
 [[Fail:Логотип домена «.рф».svg|thumb|right|250px|Venälaižen Federacijan «.рф»-internetdomenan logotip]]
-'''.рф''' om [[Venäma]]n komplimentarine domen [[.ru]]-domenale. Se om avaitud [[2010]]-nden voden uhokul.
+'''.рф''' om [[Venäma]]n komplimentarine domen [[.ru]]-domenale. Se om avaitud [[2010]]-nden voden 12. päiväl semendkud. Avoin registracii zavodihe sen-žo voden 11. kül'mkud, sille aigale kaik kaclimed oma radajidenke kirillicanke domennimiš versijoidenke. Domenan [[punikod]] om ''.xn--p1ai''.
 
-Nece om ezmäine domen [[kirilline kirjamišt|kirilližel kirjamištol]] Internetas.
+Nece om ezmäine domen [[kirilline kirjamišt|kirilližel kirjamištol]] Internetas. Vl 2014 kaik 900 tuhad domennimid oli registriruidud .рф-zonas. Vl 2018 se jäi kaikiš enamba kävutadud internacionaliziruidud domenaks. Sab kävutada vaiše kirilližen kirjamišton kirjamid domennimes.
 
-[[Punikod]] om ''.xn--p1ai''.
+Registracii om lasktud kahtendel tazopindal oikti.
 
 == Irdkosketused ==
 * [http://www.cctld.ru/ru/ Domenan sait: Internet-verkon nacionaližen domenan koordinacine keskuz (''cctld.ru'').] {{ref-ru}} {{ref-en}}
