--- a/.рф.mw
+++ b/.рф.mw
@@ -1,7 +1,7 @@
 [[Fail:Логотип домена «.рф».svg|thumb|right|250px|Venälaižen Federacijan «.рф»-internetdomenan logotip]]
 '''.рф''' om [[Venäma]]n komplimentarine domen [[.ru]]-domenale. Se om avaitud [[2010]]-nden voden 12. päiväl semendkud. Avoin registracii zavodihe sen-žo voden 11. kül'mkud, sille aigale kaik kaclimed oma radajidenke kirillicanke domennimiš versijoidenke. Domenan [[punikod]] om ''.xn--p1ai''.
 
-Nece om ezmäine domen [[kirilline kirjamišt|kirilližel kirjamištol]] Internetas. Vl 2014 kaik 900 tuhad domennimid oli registriruidud .рф-zonas. Vl 2018 se jäi kaikiš enamba kävutadud internacionaliziruidud domenaks. Sab kävutada vaiše kirilližen kirjamišton kirjamid domennimes.
+Nece om ezmäine domen [[kirilline kirjamišt|kirilližel kirjamištol]] Internetas. Edel sidä arabankel'žed mad saiba jo domenoid araban kirjkelel. Vl 2014 kaik 900 tuhad domennimid oli registriruidud .рф-zonas, sil-žo aigal .ru-zonas oli viž kerdad enamba domennimid. Vl 2018 .рф jäi kaikiš enamba kävutadud internacionaliziruidud domenaks. Sab kävutada kirilližen kirjamišton kirjamid domennimes tobjimalaz, no erased domennimed mülütadas i luguid, i latinan simvolid kirillican ližaks.
 
 Registracii om lasktud kahtendel tazopindal oikti.
 
