--- a/Ready_for_the_Victory.mw
+++ b/Ready_for_the_Victory.mw
@@ -2,7 +2,7 @@
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]]. Kompozicijan tegii i singlan prodüser om [[Diter Bolen]]. Eziauguine pajo om sätud [[evrodens]]-stiliš.
 
-Singl saihe seičemendehe sijhasai Saksanman hitparadas, panihe sidä 11. sijha Ispanijan čartas. Kuz' pajon versijad i muzikklip mülüdas pästtud Saksanmaha singlha. Venäman singl mülütab ližapajoid.
+Singl saihe seičemendehe sijhasai Saksanman hitparadas, panihe sidä 11. sijha Ispanijan čartas. Kuz' pajon versijad i muzikklip mülüdas pästtud Saksanmaha singlha. Venäman singl mülütab pajon koume versijad i nenid ližapajoid: ''Rouge Et Noir'', ''[[Space Mix '98]]''.
 
 == Homaičendad ==
 <references />
