--- a/Živatoiden_mirus.mw
+++ b/Živatoiden_mirus.mw
@@ -1,6 +1,6 @@
-'''«Živatoiden mirus»''' ({{lang-ru|«В мире животных»}}) om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] i [[Venäma|venälaine]] TV-oigenduz [[živat]]oiden da niiden tedoidusiden polhe venän kelel. Lähtleb efirha vspäi 1968. Ozutaze «[[Karusel' (telekanal)|Karusel']]»-telekanalal lapsiden täht vspäi 2016.
+'''«Živatoiden mirus»''' ({{lang-ru|«В мире животных»}}) oli [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] i [[Venäma|venälaine]] TV-oigenduz [[živat]]oiden londuseližes elos da niiden tedoidusiden polhe venän kelel. Lähtli efirha vspäi 1968 vhesai 2019 (51 sezon, uziden pästandoiden fil'mdand om seižuhtadud). Ozutihe «[[Karusel' (telekanal)|Karusel']]»-telekanalal lapsiden täht vspäi 2016 vn 2019 lophusai.
 
-Vodespäi [[1977]] TV-oigendusen vedai om [[Drozdov Nikolai|Nikolai Drozdov]]. Prodüser om Irina Lapina (1995−2009 i vspäi 2015). Pästandan hätkeližuz om 20 minutad (edel 2016. vot oli ≈27 minutad).
+Vodespäi [[1977]] TV-oigendusen serijoiden vedai om [[Drozdov Nikolai|Nikolai Drozdov]]. Prodüser om Irina Lapina (1995−2009 i vspäi 2015). Pästandan hätkeližuz om 20 minutad (edel 2016. vot oli ≈27 minutad). Nevondkundaližen aigan oigenduz lähtli efirha sobatoil (möhemba pühäpäivil) Ezmäižel kanalal 37 vot. Eziauguižešti teleoigenduz mülüti dokumentaližid fotoid da videoid, i niiden tegijad starinoičiba fil'mdandan aigas. Vspäi 1999 oigendusen fil'mdand tegese studijas mugažo.
 
 == Homaičendad ==
 <references />
