--- a/Živatoiden_mirus.mw
+++ b/Živatoiden_mirus.mw
@@ -1,6 +1,6 @@
 '''«Živatoiden mirus»''' ({{lang-ru|«В мире животных»}}) oli [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] i [[Venäma|venälaine]] TV-oigenduz [[živat]]oiden londuseližes elos da niiden tedoidusiden polhe venän kelel. Lähtli efirha vspäi 1968 vhesai 2019 (51 sezon, uziden pästandoiden fil'mdand om seižuhtadud). Ozutihe «[[Karusel' (telekanal)|Karusel']]»-telekanalal lapsiden täht vspäi 2016 vn 2019 lophusai.
 
-[[Aleksandr Zguridi]]-režissör-dokumentalist pani oigendusen alust i oli sen vedajan vll 1968−1975, kävuti ičeze fil'mdandoid. Vodespäi [[1977]] TV-oigendusen serijoiden vedai om [[Drozdov Nikolai|Nikolai Drozdov]]. Prodüser om Irina Lapina (1995−2009 i vspäi 2015). Pästandan hätkeližuz om 20 minutad (edel 2016. vot oli ≈27 minutad).
+[[Aleksandr Zguridi]]-režissör-dokumentalist pani oigendusen alust i oli sen vedajan vll 1968−1975, kävuti ičeze fil'mdandoid. Vll 1977−2018 TV-oigendusen serijoiden vedai oli [[Drozdov Nikolai|Nikolai Drozdov]], vspäi 2016 Aleksei Lapin. Prodüser om Irina Lapina (1995−2009 i vspäi 2015). Pästandan hätkeližuz om 20 minutad (edel 2016. vot oli ≈27 minutad).
 
 Nevondkundaližen aigan oigenduz lähtli efirha sobatoil (möhemba pühäpäivil) Ezmäižel kanalal 37 vot. Eziauguižešti teleoigenduz mülüti dokumentaližid fotoid da videoid, i niiden tegijad starinoičiba fil'mdandan aigas. Vspäi 1999 oigendusen fil'mdand tegese studijas mugažo.
 
