--- a/Živatoiden_mirus.mw
+++ b/Živatoiden_mirus.mw
@@ -4,8 +4,8 @@
 
 Nevondkundaližen aigan oigenduz lähtli efirha sobatoil (möhemba pühäpäivil) Ezmäižel kanalal 37 vot. Eziauguižešti teleoigenduz mülüti dokumentaližid fotoid da videoid, i niiden tegijad starinoičiba fil'mdandan aigas. Vspäi 1999 oigendusen fil'mdand tegese studijas mugažo.
 
-== Homaičendad ==
-<references />
+== Irdkosketused ==
+* [http://www.karusel-tv.ru/announce/14852-v_mire_zhivotnyh_s_nikolaem_drozdovym Teleoigendusen lehtpoled «Karusel'»-TV-kanalan ''karusel-tv.ru''-saital.] {{ref-ru}}
 
 {{stub}}
 [[Kategorii:Karusel' (telekanal)]]
