--- a/Drozdov_Nikolai.mw
+++ b/Drozdov_Nikolai.mw
@@ -2,9 +2,9 @@
 | изображение = Nikolay Drozdov2.jpg
 | описание изображения = Nikolai Drozdov vn 2010 sügüz'kus
 }}
-'''Nikolai Nikolajevič Drozdov''' ({{lang-ru|Николай Николаевич Дроздов}}; sünd. [[20. heinku]] [[1937]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] da [[Venäma|venälaine]] zoolog, lehtezmez', änetoitandan akt'or da TV-vedai.
+'''Nikolai Nikolajevič Drozdov''' ({{lang-ru|Николай Николаевич Дроздов}}; sünd. [[20. heinku]] [[1937]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] da [[Venäma|venälaine]] zoolog i geograf, lehtezmez', änetoitandan akt'or da TV-vedai, kirjoiden da kirjutusiden riven tegii.
 
-Vodespäi [[1975]] hän vedab «[[Živatoiden mirus]]»-oigendust.
+Vll 1977−2018 Drozdov vedi «[[Živatoiden mirus]]»-teleoigendust. Venälaižen Federacijan arvostadud lehtezmez' (2018).
 
 == Homaičendad ==
 <references/>
