--- a/Süvärensu.mw
+++ b/Süvärensu.mw
@@ -11,9 +11,13 @@
 }}
 '''Süvärensu''' ({{lang-ru|Свирица}}, {{lang-fi|Syvärinsuu}}) om [[Venäma]]n žilo [[Leningradan agj]]an [[Volhovan rajon]]as. Žilo om [[Süvärensun küläkund]]an administrativine keskuz.
 
-Sätihe eländpunktad [[1938. voz'|1938-ndes vodes]] nellän külän ühtištusel: Kondrat'jevo, Uz' Süvärensu (se oli kaikiš suremb niišpäi), Vanh Süvärensu i Tegimkülä.
+== Istorii ==
+Ezmäižed eländpunktad oliba pandud [[Süvär'|Süvären]] sun randoihe 18. voz'sadal, [[Vanhan Ladogan kanal]]an sauvondan täht.
 
-Žilo sijadase rajonan pohjoižpäivnouzmas, läz sen röunad. Süvärensu seižub [[Paksjogi|Paksjogen]] i [[Süvär'|Süvären]] randoil. Sijadase [[Lidnsar'|Lidnsaren]] südäimes mugažo, sen keskuses pen' [[so]] om olmas. Üks'jäine sild om žilos, toižed randad ühtenzoitasoiš motorvenehil kezaaigan.
+Sätihe eländpunktad radnikžiloks [[1938. voz'|1938-ndes vodes]] nellän külän ühtištusel: Kondrat'jevo, Uz' Süvärensu (se oli kaikiš suremb niišpäi), Vanh Süvärensu i Tegimkülä.
+
+== Geografijan andmused ==
+Žilo sijadase rajonan pohjoižpäivnouzmas, läz sen röunad. Süvärensu seižub [[Paksjogi|Paksjogen]] i Süvären randoil. Sijadase [[Lidnsar'|Lidnsaren]] südäimes mugažo, pen' [[so]] om olmas sen keskuses. Üks'jäine sild om žilos, toižed randad ühtenzoitasoiš motorvenehil kezaaigan. Matkad [[Volhov]]-rajonkeskushesai om 90 km suvipäivlaskmha.
 
 Žilon eläjiden lugu oli 655 ristitud 2007-ndes vodes. Kaikiš suremb ristitišt oli 2652 eläjad vl 1939. Lugetas žilos üks'toštkümne irdad.
 
