--- a/Süvärensu.mw
+++ b/Süvärensu.mw
@@ -17,7 +17,7 @@ Ezmäižed eländpunktad oliba pandud [[Süvär'|Süvären]] sun randoihe 18. vo
 Sätihe eländpunktad radnikžiloks [[1938. voz'|1938-ndes vodes]] nellän külän ühtištusel: Kondrat'jevo, Uz' Süvärensu (se oli kaikiš suremb niišpäi), Vanh Süvärensu i Tegimkülä.
 
 == Geografijan andmused ==
-Žilo sijadase rajonan pohjoižpäivnouzmas, läz sen röunad. Süvärensu seižub [[Paksjogi|Paksjogen]] i Süvären randoil. Sijadase [[Lidnsar'|Lidnsaren]] südäimes mugažo, pen' [[so]] om olmas sen keskuses. Üks'jäine sild om žilos, toižed randad ühtenzoitasoiš motorvenehil kezaaigan. Matkad [[Volhov]]-rajonkeskushesai om 90 km suvipäivlaskmha.
+Žilo sijadase rajonan pohjoižpäivnouzmas, läz sen röunad. Süvärensu seižub [[Paksjogi|Paksjogen]] i Süvären randoil. Sijadase [[Lidnsar'|Lidnsaren]] südäimes mugažo, pen' [[so]] om olmas sen keskuses. Üks'jäine sild om žilos, toižed randad ühtenzoitasoiš motorvenehil kezaaigan. Matkad [[Volhov (lidn)|Volhov]]-rajonkeskushesai om 90 km suvipäivlaskmha.
 
 Žilon eläjiden lugu oli 655 ristitud 2007-ndes vodes. Kaikiš suremb ristitišt oli 2652 eläjad vl 1939. Lugetas žilos üks'toštkümne irdad.
 
