--- a/Turkmenbaši.mw
+++ b/Turkmenbaši.mw
@@ -15,11 +15,18 @@
 }}
 '''Turkmenbaši''' ({{lang-tk|Türkmenbaşy}}) om lidn da meriport [[Turkmenistan]]an päivlaskmas. Mülüb [[Balkanabatan agj]]aha.
 
-Nügüdläižen eländpunktan aluz om pandud vl 1869 kuti [[Venäman imperii|Venäman imperijan]] armijan ''Krasnovodsk''-lidnuz. Raudte ühtenzoiti portad Keskuzazijan järedoidenke lidnoidenke 20. voz'sadan augotišes. Udesnimitihe vl 1993 [[Saparmurat Nijazov]]-prezidentan toižen nimen mödhe.
+== Istorii ==
+Nügüdläižen eländpunktan aluz om pandud vl 1869 kuti [[Venäman imperii|Venäman imperijan]] armijan ''Krasnovodsk''-lidnuz. Raudte ühtenzoiti portad Keskuzazijan järedoidenke lidnoidenke 20. voz'sadan augotišes. Nevondkundaližen aigan lidn oli Krasnovodskan agjan administrativižeks keskuseks, agj oli olmas vll 1939−1947, 1952−1955, 1973−1988. Udesnimitihe lidnad vl 1993 [[Saparmurat Nijazov]]-prezidentan toižen nimen mödhe.
 
+Turkmenbaši šingotase [[kivivoi]]n ümbriradmižen tegimiden kompleksal (benzin, tehnižed void, polipropilen), meriportal i merikurortal.
+
+== Geografijan andmused ==
 Lidn sijadase [[Kaspijan meri|Kaspijan meren]] päivnouzmaižel randal, 27 m ü.m.t. keskmäižel korktusel. Matkad [[Ašgabat]]hasai om 520 km päivnouzmha orhal vai 580 km avtotel. Ehtatim ühtenzoitab [[Baku]]nke päivlaskmas (Azerbaidžan, 306 km).
 
-Vl 2010 eläjiden lugu oli 73 803 ristitud. [[Kivivoi]]n ümbriradmižen tegimiden kompleks, merikurort, lendimport.
+Turkmenbaši jagase kahteks etrapaks.
+
+== Eläjad ==
+Vl 2010 eläjiden lugu oli 73 803 ristitud. Kaikiš suremb ristitišt om nügüd'.
 
 == Sebruzlidnad ==
 * {{LVA|#}} [[Jurmal]], [[Latvii]] (2013)
