--- a/Turkmenbaši.mw
+++ b/Turkmenbaši.mw
@@ -18,7 +18,7 @@
 == Istorii ==
 Nügüdläižen eländpunktan aluz om pandud vl 1869 kuti [[Venäman imperii|Venäman imperijan]] armijan ''Krasnovodsk''-lidnuz. Raudte ühtenzoiti portad Keskuzazijan järedoidenke lidnoidenke 20. voz'sadan augotišes. Nevondkundaližen aigan lidn oli Krasnovodskan agjan administrativižeks keskuseks, agj oli olmas vll 1939−1947, 1952−1955, 1973−1988. Udesnimitihe lidnad vl 1993 [[Saparmurat Nijazov]]-prezidentan toižen nimen mödhe.
 
-Turkmenbaši šingotase [[kivivoi]]n ümbriradmižen tegimiden kompleksal (benzin, tehnižed void, polipropilen), meriportal i merikurortal.
+Turkmenbaši šingotase [[kivivoi]]n ümbriradmižen tegimiden kompleksal (benzin, tehnižed void, polipropilen), rahvahidenkeskeižel meriportal i Avaz-merikurortal ({{lang-tk|Awaza}}).
 
 == Geografijan andmused ==
 Lidn sijadase [[Kaspijan meri|Kaspijan meren]] päivnouzmaižel randal, 27 m ü.m.t. keskmäižel korktusel. Matkad [[Ašgabat]]hasai om 520 km päivnouzmha orhal vai 580 km avtotel. Ehtatim ühtenzoitab [[Baku]]nke päivlaskmas (Azerbaidžan, 306 km).
@@ -27,6 +27,8 @@ Turkmenbaši jagase kahteks etrapaks.
 
 == Eläjad ==
 Vl 2010 eläjiden lugu oli 73 803 ristitud. Kaikiš suremb ristitišt om nügüd'.
+
+Rahvahidenkeskeine civiline Turkmenbaši-lidnan lendimport (''KRW / UTAK'') radab Avazan etrapas 12 km lidnan keskusespäi. Tehtas passažirreisid Turkmenistanadme i [[Stambul]]ha. Jügureisad ühtenzoittas Suvipäivlaskmašt Azijad Evropanke i Kavkazan pälidnoidenke.
 
 == Sebruzlidnad ==
 * {{LVA|#}} [[Jurmal]], [[Latvii]] (2013)
