--- a/Kremenčuk.mw
+++ b/Kremenčuk.mw
@@ -13,15 +13,23 @@
  | Telefonkod = +380-536 (6)
  | Aigvö = tal'vel [[UTC]]+2,<br />kezal [[UTC]]+3
 }}
-'''Kremenčuk''' ({{lang-uk|Кременчук}}, röunantagaižiš kanzoiš mugažo ''Кремінчук'') om [[Ukrain]]an lidn [[Poltavan agj]]as.
+'''Kremenčuk''' ({{lang-uk|Кременчук}}, röunantagaižiš kanzoiš mugažo ''Кремінчук'') om [[Ukrain]]an lidn [[Poltavan agj]]as. Se om agjan kahtenz' lidn eläjiden lugun mödhe i kaikiš suremb tegimištoline keskuz (agjan tehmižprodukcijan pol').
 
-Lidn sijadase [[Dnepr]]an muugotil randoil. Kaikiš suremb eläjiden lugu oli 248 tuh. ristituid vl 1995. Läz 450 tuhad eläb ezilidnoidenke. Kremenčuk jagase 2 administrativižhe rajonha: Avtotegimen (ukr. ''Автозаводський район'') i Krukovan (ukr. ''Крюківський район'').
+== Geografijan andmused ==
+Lidn sijadase [[Dnepr]]an muugotil randoil. Kremenčukan GES i vezivaradim sijadasoiš ülezjogen.
+
+Kremenčuk jagase kahteks administrativižeks rajonaks: Avtotegimen (ukr. ''Автозаводський район'') i Krukovan (ukr. ''Крюківський район'').
+
+Kaikiš suremb eläjiden lugu oli 248 tuh. ristituid vl 1995. Läz 450 tuhad eläjid om ezilidnoidenke.
+
+== Ižanduz ==
+Kremenčukan ižandusen päsarakod oma avtosauvomine (AvtoKrAZ, avtoühthekeradai tegim, tesauvondan mašinoiden tegim, «Kremen'»-avtoližavedamoiden edheotand, kezroiden tegim), raudtekaluišton pästand (vagontegim i raudbetonšpaloiden tegim), kivivoinümbriradmine, metallurgii (terasen valamižtegim), sömtegimišt (koume leibäntegint, lihakombinat, maidtegim, nell' konditerišt fabrikad, likörvintegim i tabakfabrik), kebn tegimišt (nahkankombinat i kaks' omblendfabrikad).
 
 == Galerei ==
-<center><gallery>
-Fail:Kremenchugskij rajon.PNG|Kremenčukan röun da ezilidnad
-Fail:Кременчуцька міська рада 1.JPG|Lidnan parlament
-</gallery></center>
+<gallery>
+Kremenchugskij rajon.PNG|Kremenčukan röun da ezilidnad
+Кременчуцька міська рада 1.JPG|Lidnan parlament
+</gallery>
 
 == Irdkosketused ==
 * [http://www.kremen.gov.ua/ Kremenčuk-lidnan oficialine internet-portal (''kremen.gov.ua'').] {{ref-uk}}
